Release 1.2 (in development)
============================

* PR#111: Respect add_autodoc_attrgetter() even when inherited-members is set.
  Thanks to A. Jesse Jiryu Davis.

* #1090: Fix gettext does not extract glossary terms.

* #1070: Avoid un-pickling issues when running Python 3 and the saved
  environment was created under Python 2.

* #1069: Fixed error caused when autodoc would try to format signatures of
  "partial" functions without keyword arguments (patch by Artur Gaspar).

* The :confval:`latex_documents`, :confval:`texinfo_documents`, and
  :confval:`man_pages` configuration values will be set to default values based
  on the :confval:`master_doc` if not explicitly set in :file:`conf.py`.
  Previously, if these values were not set, no output would be genereted by
  their respective builders.

* The :rst:dir:`toctree` directive and the ``toctree()`` template function now
  have an ``includehidden`` option that includes hidden toctree entries (bugs
  #790 and #1047). A bug in the ``maxdepth`` option for the ``toctree()``
  template function has been fixed (bug #1046).

* PR#99: Strip down seealso directives to normal admonitions.  This removes
  their unusual CSS classes (admonition-see-also), inconsistent LaTeX
  admonition title ("See Also" instead of "See also"), and spurious indentation
  in the text builder.

* sphinx-build now has a verbose option :option:`-v` which can be
  repeated for greater effect.  A single occurrance provides a
  slightly more verbose output than normal.  Two or more occurrences
  of this option provides more detailed output which may be useful for
  debugging.

* sphinx-build now provides more specific error messages when called with
  invalid options or arguments.

* sphinx-build now supports the standard :option:`--help` and
  :option:`--version` options.

* #869: sphinx-build now has the option :option:`-T` for printing the full
  traceback after an unhandled exception.
